- updated userlist design - added feature to filter searches in userlist

--- a/acp/acp_src/sass/formstyle.css
+++ b/acp/acp_src/sass/formstyle.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 form {
+  font-family: "Open Sans", serif;
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
@@ -17,8 +18,7 @@ form h1 {
   font-family: "Open Sans", serif;
   font-size: 22px;
 }
-form input[type=text], form input[type=email], form input[type=password], form input[type=number], form textarea, form select, form input[type=date] {
-  font-family: "Open Sans", serif;
+form input[type=text], form input[type=email], form input[type=password], form input[type=number], form textarea, form select, form input[type=date], form option {
   display: block;
   padding: 0.5rem 1.25rem;
   color: #343434;
@@ -30,10 +30,10 @@ form input[type=text], form input[type=email], form input[type=password], form i
   font-size: 14px;
   transition-duration: 0.25s;
 }
-form input[type=text]:focus, form input[type=email]:focus, form input[type=password]:focus, form input[type=number]:focus, form textarea:focus, form select:focus, form input[type=date]:focus {
+form input[type=text]:focus, form input[type=email]:focus, form input[type=password]:focus, form input[type=number]:focus, form textarea:focus, form select:focus, form input[type=date]:focus, form option:focus {
   border-left: inset 7.5px #0e5cff;
 }
-form input[type=text]:invalid, form input[type=email]:invalid, form input[type=password]:invalid, form input[type=number]:invalid, form textarea:invalid, form select:invalid, form input[type=date]:invalid {
+form input[type=text]:invalid, form input[type=email]:invalid, form input[type=password]:invalid, form input[type=number]:invalid, form textarea:invalid, form select:invalid, form input[type=date]:invalid, form option:invalid {
   border: 1px solid #BC134E;
 }
 form input[type=submit] {
