--- a/acp/acp_src/sass/formstyle.sass
+++ b/acp/acp_src/sass/formstyle.sass
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap')
 
+
 form
+  font-family: 'Open Sans', serif
   position: absolute
   transform: translate(-50%, -50%)
   top: 50%
@@ -23,8 +25,7 @@ form
     font-family: 'Open Sans', serif
     font-size: 22px
 
-  input[type=text], input[type=email], input[type=password], input[type=number], textarea, select, input[type=date]
-    font-family: 'Open Sans', serif
+  input[type=text], input[type=email], input[type=password], input[type=number], textarea, select, input[type=date], option
     display: block
     padding: .5rem 1.25rem
     color: #343434
