--- a/acp/users/user-wrapper.css
+++ b/acp/users/user-wrapper.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
+* {
+  font-family: "Open Sans", serif;
+}
+
 #user-wrapper {
   max-width: 90vw;
   position: relative;
@@ -38,6 +42,36 @@
 }
 #user-wrapper th, #user-wrapper td {
   padding: 10px;
+}
+
+#searchcontainer {
+  position: relative;
+  display: inline-block;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  margin-top: 3.5vh;
+}
+#searchcontainer #searchbar {
+  border: 2px solid #343434;
+  padding: 0.5rem 0.9rem;
+  font-size: 18px;
+  min-width: 35vw;
+  outline: none;
+  transition-duration: 0.25s;
+}
+#searchcontainer #searchbar:focus {
+  border: 2px solid #0e5cff;
+  font-weight: 600;
+}
+#searchcontainer #searchfilter {
+  border: 2px solid #343434;
+  padding: 0.5rem 0.865rem;
+  font-size: 18px;
+  outline: none;
+}
+#searchcontainer #searchfilter:focus {
+  border: 2px solid #0e5cff;
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=user-wrapper.css.map */
