--- a/acp/users/user-wrapper.css
+++ b/acp/users/user-wrapper.css
@@ -44,9 +44,26 @@
   padding: 10px;
 }
 
+#searchbar {
+  border: 1px solid #343434;
+  position: sticky;
+  top: 0;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  margin-top: 2.5rem;
+  padding: 0.5rem 0.9rem;
+  font-size: 18px;
+  min-width: 35vw;
+  transition-duration: 0.25s;
+}
+#searchbar:focus {
+  border-bottom: inset 5px #0e5cff;
+}
+
 #searchcontainer {
+  font-family: "Open Sans", serif;
   position: relative;
-  display: inline-block;
+  display: inline;
   transform: translate(-50%, -50%);
   left: 50%;
   margin-top: 3.5vh;
@@ -65,7 +82,7 @@
 }
 #searchcontainer #searchfilter {
   border: 2px solid #343434;
-  padding: 0.5rem 0.865rem;
+  padding: 0.5rem 0.85rem;
   font-size: 18px;
   outline: none;
 }
