--- a/acp/users/user-wrapper.sass
+++ b/acp/users/user-wrapper.sass
@@ -49,9 +49,25 @@
   th, td
     padding: 10px
 
+#searchbar
+  border: 1px solid #343434
+  position: sticky
+  top: 0
+  transform: translate(-50%, -50%)
+  left: 50%
+  margin-top: 2.5rem
+  padding: .5rem .9rem
+  font-size: 18px
+  min-width: 35vw
+  transition-duration: .25s
+
+  &:focus
+    border-bottom: inset 5px #0e5cff
+
 #searchcontainer
+  font-family: 'Open Sans', serif
   position: relative
-  display: inline-block
+  display: inline
   transform: translate(-50%, -50%)
   left: 50%
   margin-top: 3.5vh
@@ -70,7 +86,7 @@
 
   #searchfilter
     border: 2px solid #343434
-    padding: .5rem .865rem
+    padding: .5rem .85rem
     font-size: 18px
     outline: none
 
