--- a/acp/users/user-wrapper.sass
+++ b/acp/users/user-wrapper.sass
@@ -49,34 +49,21 @@
   th, td
     padding: 10px
 
-#searchbar
-  border: 1px solid #343434
-  position: sticky
-  top: 0
-  transform: translate(-50%, -50%)
-  left: 50%
-  margin-top: 2.5rem
-  padding: .5rem .9rem
-  font-size: 18px
-  min-width: 35vw
-  transition-duration: .25s
-
-  &:focus
-    border-bottom: inset 5px #0e5cff
-
 #searchcontainer
+  text-align: center
   font-family: 'Open Sans', serif
   position: relative
-  display: inline
   transform: translate(-50%, -50%)
   left: 50%
-  margin-top: 3.5vh
+  top: 5vh
+  margin-bottom: 7.5vh
 
   #searchbar
+    text-align: left
     border: 2px solid #343434
     padding: .5rem .9rem
     font-size: 18px
-    min-width: 35vw
+    min-width: 27.5vw
     outline: none
     transition-duration: .25s
 
@@ -92,4 +79,3 @@
 
     &:focus
       border: 2px solid #0e5cff
-      font-weight: 600
