--- a/acp/acp_src/sass/formstyle.css
+++ b/acp/acp_src/sass/formstyle.css
@@ -14,6 +14,9 @@ form {
   min-width: 50vw;
   max-width: 75vw;
 }
+form .error_msg {
+  color: #BC134E;
+}
 form h1 {
   font-family: "Open Sans", serif;
   font-size: 22px;
