--- a/acp/acp_src/sass/formstyle.sass
+++ b/acp/acp_src/sass/formstyle.sass
@@ -21,6 +21,9 @@ form
   min-width: 50vw
   max-width: 75vw
 
+  .error_msg
+    color: #BC134E
+
   h1
     font-family: 'Open Sans', serif
     font-size: 22px
