--- a/acp/users/user-wrapper.css
+++ b/acp/users/user-wrapper.css
@@ -43,6 +43,15 @@
 #user-wrapper th, #user-wrapper td {
   padding: 10px;
 }
+#user-wrapper #add {
+  text-align: center;
+  font-size: 18px;
+}
+#user-wrapper #add a {
+  color: #0e5cff;
+  font-weight: 600;
+  text-decoration: none;
+}
 
 #searchcontainer {
   text-align: center;
@@ -58,7 +67,7 @@
   border: 2px solid #343434;
   padding: 0.5rem 0.9rem;
   font-size: 18px;
-  min-width: 27.5vw;
+  min-width: 32.5vw;
   outline: none;
   transition-duration: 0.25s;
 }
@@ -67,6 +76,7 @@
   font-weight: 600;
 }
 #searchcontainer #searchfilter {
+  font-family: "Open Sans", serif;
   border: 2px solid #343434;
   padding: 0.5rem 0.85rem;
   font-size: 18px;
@@ -74,6 +84,9 @@
 }
 #searchcontainer #searchfilter:focus {
   border: 2px solid #0e5cff;
+}
+#searchcontainer option {
+  font-family: "Open Sans", serif;
 }
 
 /*# sourceMappingURL=user-wrapper.css.map */
