--- a/acp/users/user-wrapper.sass
+++ b/acp/users/user-wrapper.sass
@@ -2,9 +2,11 @@
 
 *
   font-family: "Open Sans", serif
+  padding: 0
+  margin: 0
 
 #user-wrapper
-  max-width: 90vw
+  width: 90vw
   position: relative
   transform: translate(-50%, 0%)
   left: 50%
@@ -21,6 +23,12 @@
 
   font-family: 'Open Sans', serif
   text-align: left
+
+  tr:nth-child(odd)
+    background-color: #eee
+
+  tr:nth-child(even)
+    background-color: #fff
 
   a
     color: #0d577f
@@ -43,8 +51,8 @@
     border-bottom: 1px solid #999999
 
   #header-line
-    background-color: #999999
-    box-shadow: 0 2px 5px rgba(0, 0, 0, .25)
+    background-color: #3f6dca
+    box-shadow: 0 1px 10px rgba(0, 0, 0, .125)
 
   th, td
     padding: 10px
@@ -52,20 +60,34 @@
   #add
     text-align: center
     font-size: 18px
+    background-color: #9bb3e9
+
+    td
+      padding: 1.35rem 0
+
 
     a
       color: #0e5cff
       font-weight: 600
       text-decoration: none
 
+body, html
+  height: 125vh
+
 #searchcontainer
+  z-index: 99
   text-align: center
   font-family: 'Open Sans', serif
-  position: relative
-  transform: translate(-50%, -50%)
+  position: sticky
+  width: 100%
   left: 50%
-  top: 5vh
+  top: 0
+  padding: 5vh 0
   margin-bottom: 7.5vh
+  background-color: #FFF
+  border-bottom: 1px solid #888888
+
+  transition-duration: .25s
 
   #searchbar
     text-align: left
