--- a/acp/acp_src/sass/formstyle.sass
+++ b/acp/acp_src/sass/formstyle.sass
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap')
 
+.error_msg
+  color: #BC134E
 
-form
+
+/*form
   font-family: 'Open Sans', serif
   position: absolute
   transform: translate(-50%, -50%)
@@ -20,9 +23,6 @@ form
 
   min-width: 50vw
   max-width: 75vw
-
-  .error_msg
-    color: #BC134E
 
   h1
     font-family: 'Open Sans', serif
@@ -60,4 +60,4 @@ form
     max-width: 100%
 
     min-height: 25vh
-    max-height: 65vh
+    max-height: 65vh*/
