--- a/acp/users/user-wrapper.sass
+++ b/acp/users/user-wrapper.sass
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap')
 
-*
+/**
   font-family: "Open Sans", serif
   padding: 0
   margin: 0
 
-#user-wrapper
+/*#user-wrapper
   width: 90vw
   position: relative
   transform: translate(-50%, 0%)
@@ -48,33 +48,33 @@
     font-weight: 400
     font-size: 14px
 
-    border-bottom: 1px solid #999999
+    border-bottom: 1px solid #999999*/
 
-  #header-line
-    background-color: #3f6dca
-    box-shadow: 0 1px 10px rgba(0, 0, 0, .125)
+#header-line
+  background-color: #3f6dca
+  box-shadow: 0 1px 10px rgba(0, 0, 0, .125)
 
-  th, td
+/*  th, td
     padding: 10px
 
-  #add
-    text-align: center
-    font-size: 18px
-    background-color: #9bb3e9
+#add
+  text-align: center
+  font-size: 18px
+  background-color: #9bb3e9
 
-    td
-      padding: 1.35rem 0
+/*td
+  padding: 1.35rem 0
 
 
-    a
-      color: #0e5cff
-      font-weight: 600
-      text-decoration: none
+/*a
+  color: #0e5cff
+  font-weight: 600
+  text-decoration: none
 
-body, html
+/*body, html
   height: 125vh
 
-#searchcontainer
+/*#searchcontainer
   z-index: 99
   text-align: center
   font-family: 'Open Sans', serif
